--- a/ap-chsh-p2.tex
+++ b/ap-chsh-p2.tex
@@ -68,6 +68,12 @@ where $S$ is a basis $X$ which was constructed in a greedy way.
 	\end{equation}
 \end{definition}
 
+In the unconstrained case a submodular function can be minimized in polynomial time, while ni the
+constrained case it could be NP-hard depending on the constraint.
+
+Maximization is always NP-hard, but Greedy is an $\alpha=\frac{1}{2}$ algorithm if $f$ is monotone
+under matroid constraints.
+
 \subsection{Branch \& Bound}
 
 \begin{algorithm}[H]
@@ -151,6 +157,14 @@ Nice to know: a binary tree has $2n -1$ nodes (where $n$ is the number of leaves
 	\end{equation}
 \end{definition}
 
+\begin{definition}{Independent set}{independent-set}
+	Let $G = (V, E)$ be a graph. $I \subseteq V$ is an independent set on $G$ if all vertices in $I$
+	have no edge connecting them. Formally
+	\begin{equation}
+		I = \{ v \in V \mid u \in I \implies (u, v) \notin E \}
+	\end{equation}
+\end{definition}
+
 \subsection{Combinatorial polytopes}
 
 \begin{definition}{Matching polytope}{matching-polytope}
@@ -222,34 +236,99 @@ those.
 
 This saves compute and it is easier to parallelize.
 
+\subsubsection{Online}
+
+This algorithm works when we do not have a loss function ahead of time: at every prediction we are
+told how well we did. Our goal is to minimize a value called \textbf{regret} which is defined as
+\begin{equation}
+	R_T = \sum_{t = 1}^{T}  f_t(\vec x_t) - f(\vec x^*) \quad \text{where} \quad
+	\vec x^* = \argmin_{\vec x \in X} \sum_{t = 1}^{T} f_t(\vec x)
+\end{equation}
+where each $f_t$ is received only after having chosen $\vec x_t$.
+
+We are allowed to use different $\vec x_t$s. We study the worst case scenario, where an adversary knows
+our algorithm and gives us the worst possible $f_t$.
+
+\paragraph{Vanilla}
+For the vanilla case we just play $\vec x_t$, observe the cost of $f_t(\vec x_t)$. Then we proceed
+like in ProjGD.
+
+
+\paragraph{Follow The Leader}
+We can use also an FT(R)L algorithm, where we play the best move for the previous $f_t$.
+However this is too unstable and will lead to bad results ($R = \O(T)$, see example of alternating
+on every step), therefore we introduce regularization.
+
+A regularization function is a smooth and strongly convex function. We use it as follows
+\begin{equation}
+	\vec x_{t+1} = \argmin_{\vec x \in X} \left\{ \gamma \sum_{s=1}^{t} \grad f_s(x) + R(\vec x) \right\}
+\end{equation}
+
+We can usually choose an $\ell_2$ regularizer: $R(x) = \frac{1}{2} \norm{x - x_0}^2_2$.
+
+Actually, Vanilla OGD is just FTRL with $X = \R^d$ and $\ell_2$ regularization.
+If $X \subset \R$, then FTRL is equivalent to lazy ProjOGD (project only at the end, keep the
+unprojected value to update gradient).
+
 \subsection{Table}
+
+\subsubsection{Normal}
 
 \begin{table}[H]
 	\centering
+	\def\arraystretch{2}
 	\begin{tabular}{|c|c|c|c|c|}
 		\hline
-		                                                              &
-		\textbf{Lipschitz}                                            &
-		\textbf{Smooth}                                               &
-		\textbf{Strong}                                               &
-		\textbf{Smooth and Strong}
+		                            &
+		\textbf{Lipschitz}          &
+		\textbf{Smooth}             &
+		\textbf{Strong}             &
+		\makecell{\textbf{Smooth and}          \\ \textbf{Strong}}
 		\\
 		\hline
-		\makecell{Vanilla, Stochastic,
-		\\ Subgradient, Projected}                   &
-		$ \displaystyle \O \left(\frac{1}{\varepsilon^2} \right) $    &
-		$ \displaystyle \O \left(\frac{1}{\varepsilon} \right)$       &
-		$ \displaystyle \O \left(\frac{1}{\varepsilon} \right)$       &
-		$ \displaystyle \O \left(\log\left(\frac{1}{\varepsilon} \right)\right)$
+		Convergence                 &
+		$ R^2 B^2 \varepsilon^{-2}$ &
+		\makecell{$ R^2 L (2\varepsilon)^{-1}$ \\ (or $\O(\varepsilon^{1/2})$ for AGD)} &
+		$ \O (\varepsilon^{-1})$    &
+		$ \O (-\log  \varepsilon)$
 		\\
 		\hline
-		Accelerated                                                   &
-		                                                              &
-		$ \displaystyle \O \left(\frac{1}{\sqrt \varepsilon} \right)$ &
-		                                                              &
+		Learning                    &
+		$R (B \sqrt{T})^{-1}$       &
+		$L^{-1}$                    &
+		$ 2 (\mu (t + 1))^{-1}$     &
+		$L^{-1}$
 		\\
 		\hline
 	\end{tabular}
 \end{table}
+
+\subsubsection{Online}
+
+\begin{table}[H]
+	\centering
+	\def\arraystretch{2}
+	\begin{tabular}{|c|c|c|c|}
+		\hline                  &
+		\textbf{Vanilla}        &
+		\textbf{Expert}         &
+		\textbf{RFTL}
+		\\
+		\hline
+		Regret bound            &
+		$ RB \sqrt T$           &
+		$ \sqrt{2nT} $          &
+		$ 2RB \sqrt T  $
+		\\
+		\hline
+		Learning                &
+		$R (B \sqrt{2^i})^{-1}$ &
+		                        &
+		$ R (2 B \sqrt{2^i})^{-1}$
+		\\
+		\hline
+	\end{tabular}
+\end{table}
+
 
 \end{document}
