ap-chsh-p2: ups, not needed

--- a/ap-chsh-p2.tex
+++ b/ap-chsh-p2.tex
@@ -308,22 +308,19 @@ unprojected value to update gradient).
 \begin{table}[H]
 	\centering
 	\def\arraystretch{2}
-	\begin{tabular}{|c|c|c|c|}
+	\begin{tabular}{|c|c|c|}
 		\hline                  &
 		\textbf{Vanilla}        &
-		\textbf{Expert}         &
 		\textbf{RFTL}
 		\\
 		\hline
 		Regret bound            &
 		$ RB \sqrt T$           &
-		$ \sqrt{2nT} $          &
 		$ 2RB \sqrt T  $
 		\\
 		\hline
 		Learning                &
 		$R (B \sqrt{2^i})^{-1}$ &
-		                        &
 		$ R (2 B \sqrt{2^i})^{-1}$
 		\\
 		\hline
